peak index in a mountain

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -943,21 +943,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7127790a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "\n",
@@ -990,9 +979,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f0cb5a15",
+   "metadata": {},
+   "source": [
+    "## 📌 Best Time to Buy and Sell Stock III (LC-123)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bf4e32b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        # Initiate variables \n",
+    "        purchased = float('inf')\n",
+    "        running_profit = 0\n",
+    "        overall_profits = []\n",
+    "        \n",
+    "        # Loop \n",
+    "        for day, price in enumerate(prices):\n",
+    "            # Purchase\n",
+    "            if prices <= purchased:\n",
+    "                purchased = price\n",
+    "\n",
+    "                # Add running profit to overall profit \n",
+    "                overall_profits.append(running_profit)\n",
+    "\n",
+    "            else:\n",
+    "                # Incremebt the running profit\n",
+    "                running_profit += price\n",
+    "\n",
+    "                # Set the current price as purchased\n",
+    "                purchased = price"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18d95bef",
+   "metadata": {},
+   "source": [
+    "## 📌 Peak Index In A Mountain Array (LC-852)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5b50aee",
+   "metadata": {},
+   "source": [
+    "#### 1. Sub-Optimal (O(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4152e050",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def peakIndexInMountainArray(self, arr: List[int]) -> int:\n",
+    "        # Initialte \n",
+    "        height = 0\n",
+    "        result = 0\n",
+    "\n",
+    "        # Loop\n",
+    "        for idx, peak in enumerate(arr):\n",
+    "            # \n",
+    "            if peak > height:\n",
+    "                result = idx\n",
+    "                height = peak\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.peakIndexInMountainArray(arr = [0,10,5,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b043567c",
+   "metadata": {},
+   "source": [
+    "#### 2. Optimal (O(logn))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c831a6e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def peakIndexInMountainArray(self, arr: List[int]) -> int:\n",
+    "        # Variables \n",
+    "        left = 0\n",
+    "        right = len(arr) - 1\n",
+    "\n",
+    "        # Loop\n",
+    "        while left < right:\n",
+    "            # Calculate the mid\n",
+    "            mid = left + right // 2\n",
+    "\n",
+    "            # Check for condition \n",
+    "            if arr[mid] < arr[mid + 1]:\n",
+    "                left = mid + 1\n",
+    "            \n",
+    "            else:\n",
+    "                right = mid\n",
+    "        \n",
+    "        return left"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0afe9ab",
    "metadata": {},
    "outputs": [],
    "source": []
