--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -1096,9 +1096,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4cf46c8",
+   "metadata": {},
+   "source": [
+    "## 📌 Longest Palindromic Substring (LC-5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a0afe9ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def longestPalindrome(self, s: str) -> str:\n",
+    "        # Define\n",
+    "        result = \"\"\n",
+    "\n",
+    "        # Define expand function \n",
+    "        def expand(left, right):\n",
+    "            # Loop until elements matches \n",
+    "            while left >= 0 and right < len(s) and s[left] == s[right]:\n",
+    "                left -= 1\n",
+    "                right += 1\n",
+    "            \n",
+    "            return s[left+1 : right]\n",
+    "        \n",
+    "        # Loop\n",
+    "        for idx in range(len(s)):\n",
+    "            # For odd \n",
+    "            odd = expand(left= idx, right= idx)\n",
+    "\n",
+    "            # For even\n",
+    "            even = expand(left=idx, right=idx+1)\n",
+    "\n",
+    "            # Check which one is longer\n",
+    "            longer = odd if len(odd) > len(even) else even\n",
+    "\n",
+    "            # Final \n",
+    "            if len(longer) > len(result):\n",
+    "                result = longer\n",
+    "        \n",
+    "        return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43d4f148",
    "metadata": {},
    "outputs": [],
    "source": []
