--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -1108,18 +1108,7 @@
    "execution_count": null,
    "id": "a0afe9ab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def longestPalindrome(self, s: str) -> str:\n",
@@ -1154,9 +1143,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "669722c1",
+   "metadata": {},
+   "source": [
+    "## 📌 Rotate Array (LC-189)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "43d4f148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def rotate(self, nums: List[int], k: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        n = len(nums)\n",
+    "        k %= n\n",
+    "        nums[:] = nums[-k:] + nums[:-k]\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.rotate(nums = [1,2,3,4,5,6,7], k = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8c9f40c",
    "metadata": {},
    "outputs": [],
    "source": []
