--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -1173,12 +1173,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a52eb0b8",
+   "metadata": {},
+   "source": [
+    "## 📌 Rotate List (LC-61)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e8c9f40c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode:\n",
+    "#     def __init__(self, val=0, next=None):\n",
+    "#         self.val = val\n",
+    "#         self.next = next\n",
+    "class Solution:\n",
+    "    def rotateRight(self, head: Optional[ListNode], k: int) -> Optional[ListNode]:\n",
+    "        # Edge conditions \n",
+    "        if not head or not head.next or k == 0:\n",
+    "            return head\n",
+    "        \n",
+    "        # Get the length and make it circular\n",
+    "        pointer = head \n",
+    "        length = 1\n",
+    "        while pointer.next:\n",
+    "            length += 1\n",
+    "            pointer = pointer.next\n",
+    "        \n",
+    "        # Make existing list Cicular\n",
+    "        pointer.next = head\n",
+    "\n",
+    "        # Optimal number of rotations \n",
+    "        k %= length\n",
+    "\n",
+    "        rotation_point = length - k - 1\n",
+    "\n",
+    "        new_tail = head\n",
+    "        for _ in range(rotation_point):\n",
+    "            new_tail = new_tail.next\n",
+    "\n",
+    "        new_head = new_tail.next\n",
+    "        new_tail.next = None\n",
+    "\n",
+    "        return new_head"
+   ]
   }
  ],
  "metadata": {
