--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -1222,6 +1222,65 @@
     "\n",
     "        return new_head"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d19d3aae",
+   "metadata": {},
+   "source": [
+    "## 📌 Sort Colors (LC-75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f2f722a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def sortColors(self, nums: List[int]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        # Initiate the credentials \n",
+    "        low, i, high = 0, 0, len(nums) - 1\n",
+    "\n",
+    "        # Loop \n",
+    "        while i <= high:\n",
+    "            if nums[i] == 2:\n",
+    "                # Swap current with high \n",
+    "                nums[i] = nums[high]\n",
+    "                nums[high] = 2\n",
+    "                # Decrease the pointer index \n",
+    "                high -= 1\n",
+    "\n",
+    "            elif nums[i] == 0:\n",
+    "                # Swap the current low value \n",
+    "                nums[i] = nums[low]\n",
+    "                nums[low] = 0\n",
+    "                # Increment the pointer \n",
+    "                low += 1\n",
+    "                i += 1\n",
+    "            \n",
+    "            else:\n",
+    "                # Value is 1\n",
+    "                i += 1\n",
+    "\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.sortColors(nums= [2,0,2,1,1,0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdec54b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
