revision- palindromic search

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -783,6 +783,97 @@
     "            # Change the value \n",
     "            curr = nums[num]\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea2c8cf",
+   "metadata": {},
+   "source": [
+    "## Longest Palindrome Substring "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a830d999",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bb'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def longestPalindrome(self, s: str) -> str:\n",
+    "        # Initiate\n",
+    "        result_string = \"\"\n",
+    "\n",
+    "        # Nill condition\n",
+    "        if len(s) == 1:\n",
+    "            return s\n",
+    "\n",
+    "\n",
+    "        # Define odd length search \n",
+    "        def search(left, right):\n",
+    "            # Check for condition\n",
+    "            while left >= 0 and right < len(s) and s[left] == s[right]:\n",
+    "                # New indexes\n",
+    "                left -= 1\n",
+    "                right += 1\n",
+    "            \n",
+    "            return s[left+1:right]\n",
+    "        \n",
+    "        # Loop \n",
+    "        for idx, element in enumerate(s):\n",
+    "            # Considering even length string \n",
+    "            odd_string = search(left= idx-1, right= idx+1)\n",
+    "\n",
+    "            # Considering odd length string \n",
+    "            even_string = search(left= idx, right= idx+1)\n",
+    "\n",
+    "            # Check for longest length \n",
+    "            if len(odd_string) > len(even_string):\n",
+    "                # Compare\n",
+    "                if len(odd_string) > len(result_string):\n",
+    "                    result_string = odd_string\n",
+    "            \n",
+    "            else:\n",
+    "                # Compare\n",
+    "                if len(even_string) > len(result_string):\n",
+    "                    result_string = even_string\n",
+    "\n",
+    "        return result_string\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.longestPalindrome(s = \"cbbd\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "937f1a2f",
+   "metadata": {},
+   "source": [
+    "## Peak Index in a Mountain Array "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d908dfe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def peakIndexInMountainArray(self, arr: List[int]) -> int:\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
