--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -1269,7 +1269,7 @@
     "\n",
     "\n",
     "sol = Solution()\n",
-    "sol.sortColors(nums= [2,0,2,1,1,0])\n"
+    "sol.sortColors(nums= [2,0,2,1,1,0])"
    ]
   },
   {
