peak index of mountain- revision

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a830d999",
    "metadata": {},
    "outputs": [
@@ -856,14 +856,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "937f1a2f",
-   "metadata": {},
-   "source": [
-    "## Peak Index in a Mountain Array "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d908dfe8",
@@ -872,8 +864,33 @@
    "source": [
     "class Solution:\n",
     "    def peakIndexInMountainArray(self, arr: List[int]) -> int:\n",
-    "        "
+    "        # Initiate \n",
+    "        left, right = 0, len(arr) - 1\n",
+    "        \n",
+    "        # Loop\n",
+    "        while left <= right:\n",
+    "            # Calculate the mid \n",
+    "            mid = (left + right) // 2\n",
+    "\n",
+    "            # Check for conditions \n",
+    "            if arr[mid] < arr[mid + 1]:\n",
+    "                # Shift left\n",
+    "                left = mid + 1\n",
+    "\n",
+    "            elif arr[mid] > arr[mid+1]:\n",
+    "                # Shift right \n",
+    "                right = mid - 1\n",
+    "\n",
+    "        return left"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b77e283",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
