rotate array - revision

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -890,7 +890,17 @@
    "id": "4b77e283",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def rotate(self, nums: List[int], k: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        # Caculate the actual k\n",
+    "        k %= len(nums)\n",
+    "\n",
+    "        nums[:] = nums[-k:] + nums[:-k]        "
+   ]
   }
  ],
  "metadata": {
