rotate linked list- revision

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -856,6 +856,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c212cf9d",
+   "metadata": {},
+   "source": [
+    "## Peak Index In Mountain"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d908dfe8",
@@ -885,6 +893,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7cf56046",
+   "metadata": {},
+   "source": [
+    "## Rotate Array"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4b77e283",
@@ -900,6 +916,60 @@
     "        k %= len(nums)\n",
     "\n",
     "        nums[:] = nums[-k:] + nums[:-k]        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff403904",
+   "metadata": {},
+   "source": [
+    "## Rotate Linked List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "804d66cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode:\n",
+    "#     def __init__(self, val=0, next=None):\n",
+    "#         self.val = val\n",
+    "#         self.next = next\n",
+    "class Solution:\n",
+    "    def rotateRight(self, head: Optional[ListNode], k: int) -> Optional[ListNode]:\n",
+    "        # Edge condition\n",
+    "        if not head or not head.next or k == 0:\n",
+    "            return head\n",
+    "        \n",
+    "        # Convert the list into cicular string \n",
+    "        # Loop\n",
+    "        cicular = head\n",
+    "        length = 1\n",
+    "        while cicular.next:\n",
+    "            length += 1\n",
+    "            cicular = cicular.next\n",
+    "        \n",
+    "        # Make it circular \n",
+    "        cicular.next = head\n",
+    "\n",
+    "        # Optimal k value \n",
+    "        k %= length\n",
+    "\n",
+    "        # Calculate traversal length \n",
+    "        traversal_length = length - k - 1\n",
+    "\n",
+    "        # Traverse till k \n",
+    "        pointer = head\n",
+    "        for i in range(traversal_length):\n",
+    "            pointer = pointer.next\n",
+    "\n",
+    "        head = pointer.next\n",
+    "        pointer.next = None\n",
+    "\n",
+    "        return head       "
    ]
   }
  ],
