--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -938,7 +938,7 @@
    "id": "cbf074fa",
    "metadata": {},
    "source": [
-    "## 📌 Best Time to Buy and Sell Stock II (LC-122)"
+    "## 📌🔖 Best Time to Buy and Sell Stock II (LC-122)"
    ]
   },
   {
@@ -983,7 +983,7 @@
    "id": "f0cb5a15",
    "metadata": {},
    "source": [
-    "## 📌 Best Time to Buy and Sell Stock III (LC-123)"
+    "## 📌🔖 Best Time to Buy and Sell Stock III (LC-123)"
    ]
   },
   {
@@ -1273,13 +1273,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e8eb855",
+   "metadata": {},
+   "source": [
+    "## 📌 Longest Consecutive Sequence (LC-128)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bdec54b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "  "
+    "class Solution:\n",
+    "    def longestConsecutive(self, nums: List[int]) -> int:\n",
+    "        "
    ]
   }
  ],
