--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -238,9 +238,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36b1cd66",
+   "metadata": {},
+   "source": [
+    "## Max Profit (LC-122)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a9454eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        # Initialise \n",
+    "        profit = 0\n",
+    "        purchased = float('inf')\n",
+    "\n",
+    "        # Loop\n",
+    "        for price in prices:\n",
+    "            # Condition for purchasing \n",
+    "            if price < purchased:\n",
+    "                # Purchase \n",
+    "                purchased = price\n",
+    "            \n",
+    "            # Sell \n",
+    "            else:\n",
+    "                # Calculate profit \n",
+    "                curr_profit = price - purchased\n",
+    "\n",
+    "                # Add to total profit \n",
+    "                profit += curr_profit\n",
+    "\n",
+    "                # Re purchase \n",
+    "                purchased = price\n",
+    "        \n",
+    "        return profit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6ab84bf",
+   "metadata": {},
+   "source": [
+    "## Container With Most Water"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ad83950f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxArea(self, height: List[int]) -> int:\n",
+    "            # Initialise \n",
+    "            left, right = 0, len(height) - 1\n",
+    "            max_water_cotent = 0\n",
+    "\n",
+    "            # Loop\n",
+    "            while left < right:\n",
+    "                # Calculate min height \n",
+    "                min_height = min(height[left], height[right])\n",
+    "\n",
+    "                # Calculate water amount \n",
+    "                water_content = min_height * (right - left)\n",
+    "\n",
+    "                # Compare the max amount \n",
+    "                max_water_cotent = max(max_water_cotent, water_content)\n",
+    "\n",
+    "                # Shift the pointers\n",
+    "                if height[left] < height[right]:\n",
+    "                     left += 1\n",
+    "\n",
+    "                else:\n",
+    "                     right -= 1\n",
+    "\n",
+    "            return max_water_cotent\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.maxArea(height = [1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f27cfe8",
+   "metadata": {},
+   "source": [
+    "## House Robber IV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90ff0beb",
    "metadata": {},
    "outputs": [],
    "source": []
