--- a/revision.ipynb
+++ b/revision.ipynb
@@ -971,6 +971,97 @@
     "\n",
     "        return head       "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "275016ec",
+   "metadata": {},
+   "source": [
+    "## Subarray Sum Equals k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48b73b3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "class Solution:\n",
+    "    def subarraySum(self, nums: List[int], k: int) -> int:\n",
+    "        # Initialise \n",
+    "        prefix_sum_map = defaultdict(int)\n",
+    "        prefix_sum_map[0] = 1\n",
+    "        count = 0\n",
+    "        current_sum = 0\n",
+    "\n",
+    "        # Loop\n",
+    "        for num in nums:\n",
+    "            # Increment the sum with new number \n",
+    "            current_sum += num\n",
+    "\n",
+    "            # Calculate the target \n",
+    "            target = current_sum - k\n",
+    "\n",
+    "            # Check if target exists in hashmap \n",
+    "            if target in prefix_sum_map:\n",
+    "                # Fetch the value \n",
+    "                count += prefix_sum_map[target]\n",
+    "\n",
+    "            # Increment the value of the target \n",
+    "            prefix_sum_map[current_sum] += 1\n",
+    "        \n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2cf91db",
+   "metadata": {},
+   "source": [
+    "## Contiguous Subarray Sum "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aa2d231",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def checkSubarraySum(self, nums: List[int], k: int) -> bool:\n",
+    "        # Initialise \n",
+    "        prefix_sum_map = {0:-1}\n",
+    "        current_sum = 0\n",
+    "\n",
+    "        # Loop \n",
+    "        for idx, num in enumerate(nums):\n",
+    "            # Calculate current prefix sum \n",
+    "            current_sum += num\n",
+    "\n",
+    "            # Calculate the target \n",
+    "            target = current_sum % k\n",
+    "\n",
+    "            # Check if target in dict \n",
+    "            if target in prefix_sum_map:\n",
+    "                # Fetch starting index \n",
+    "                starting_index = prefix_sum_map[target]\n",
+    "\n",
+    "                # Calculate number of elements \n",
+    "                elements = idx - starting_index\n",
+    "\n",
+    "                if elements >= 2:\n",
+    "                    return True\n",
+    "\n",
+    "            else:\n",
+    "                prefix_sum_map[target] = idx\n",
+    "        \n",
+    "        return False\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
